--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "atlantabot",
     "version": "4.9.2",
     "description": "A very complete Discord bot (more than 70 commands) that uses the Discordjs API!",
-    "main": "atlanta.js",
+    "main": "aestetikmod.js",
     "scripts": {
         "start": "node .",
         "lint": "eslint . --ext .js",
@@ -25,12 +25,15 @@
         "@sindresorhus/slugify": "^1.1.0",
         "amethyste-api": "github:Androz2091/amethyste-api",
         "ascii-table": "0.0.9",
+        "autoprefixer": "^10.2.5",
         "blague.xyz": "^2.0.4",
         "btoa": "^1.2.1",
         "canvas": "^2.6.1",
         "chalk": "^4.1.0",
+        "cheerio": "^1.0.0-rc.5",
         "colors-generator": "^0.3.4",
         "cron": "^1.7.2",
+        "datatables.net": "^1.10.24",
         "dblapi.js": "^2.3.0",
         "discord-backup": "^2.1.19",
         "discord-canvas": "^1.3.2",
@@ -39,63 +42,41 @@
         "discord-player": "^3.0.3",
         "discord.js": "^12.5.1",
         "ejs": "^3.1.3",
+        "eve": "^0.5.4",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
+        "ffmpeg-static": "^4.2.8",
         "figlet": "^1.5.0",
         "fortnite": "^4.3.2",
+        "fullcalendar": "^5.5.1",
         "gamedig": "^2.0.21",
+        "glob": "^7.1.6",
         "i18next": "^19.6.2",
         "i18next-node-fs-backend": "^2.1.3",
+        "ip": "^1.1.5",
+        "jqlite": "^0.2.42",
+        "jquery": "^3.6.0",
         "js-string-cleaner": "^1.0.3",
+        "jsdom": "^16.5.1",
+        "markdown-it": "^12.0.4",
         "markdown-table": "^1.1.3",
+        "matchdep": "^2.0.0",
         "mathjs": "^9.0.0",
         "md5": "^2.2.1",
         "moment": "^2.26.0",
+        "mongodb": "^3.6.5",
         "mongoose": "^5.9.25",
         "ms": "^2.1.3",
-        "string-sanitizer": "^1.1.1"
-    },
-    "devDependencies": {
-        "eslint": "^7.5.0"
-    },
-    "eslintConfig": {
-        "env": {
-            "commonjs": true,
-            "es6": true,
-            "node": true
-        },
-        "extends": "eslint:recommended",
-        "globals": {
-            "Atomics": "readonly",
-            "SharedArrayBuffer": "readonly"
-        },
-        "parserOptions": {
-            "ecmaVersion": 2020
-        },
-        "rules": {
-            "prefer-const": [
-                "error"
-            ],
-            "indent": [
-                "error",
-                "tab",
-                {
-                    "SwitchCase": 1
-                }
-            ],
-            "quotes": [
-                "error",
-                "double"
-            ],
-            "semi": [
-                "error",
-                "always"
-            ],
-            "linebreak-style": 0,
-            "require-atomic-updates": 0
-        }
-    },
-    "eslintIgnore": [
-        "dashboard/public"
-    ]
+        "node": "^14.16.0",
+        "node-fetch": "^2.6.1",
+        "phantomjs-prebuilt": "^2.1.16",
+        "replace-in-file": "^6.2.0",
+        "shelljs": "^0.8.4",
+        "string-sanitizer": "^1.1.1",
+        "svg-captcha": "^1.4.0",
+        "svg-png-converter": "0.0.9",
+        "time-grunt": "^2.0.0",
+        "webpack": "^5.27.1",
+        "webpage": "^0.3.0"
+    }
 }
