--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
         "@sindresorhus/slugify": "^1.1.0",
         "amethyste-api": "github:Androz2091/amethyste-api",
         "ascii-table": "0.0.9",
+        "async-request": "^1.2.0",
         "autoprefixer": "^10.2.5",
-        "blague.xyz": "^2.0.4",
         "btoa": "^1.2.1",
         "canvas": "^2.6.1",
         "chalk": "^4.1.0",
         "cheerio": "^1.0.0-rc.5",
+        "cli-progress": "^3.9.0",
         "colors-generator": "^0.3.4",
         "cron": "^1.7.2",
         "datatables.net": "^1.10.24",
@@ -47,6 +48,7 @@
         "express-session": "^1.17.0",
         "ffmpeg-static": "^4.2.8",
         "figlet": "^1.5.0",
+        "fmylife": "^1.1.0",
         "fortnite": "^4.3.2",
         "fullcalendar": "^5.5.1",
         "gamedig": "^2.0.21",
@@ -65,6 +67,7 @@
         "mathjs": "^9.0.0",
         "md5": "^2.2.1",
         "moment": "^2.26.0",
+        "moment-timezone": "^0.5.33",
         "mongodb": "^3.6.5",
         "mongoose": "^5.9.25",
         "ms": "^2.1.3",
@@ -73,6 +76,7 @@
         "phantomjs-prebuilt": "^2.1.16",
         "replace-in-file": "^6.2.0",
         "shelljs": "^0.8.4",
+        "slot-machine": "^2.1.0",
         "string-sanitizer": "^1.1.1",
         "svg-captcha": "^1.4.0",
         "svg-png-converter": "0.0.9",
