--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "atlantabot",
+    "name": "aestetikmod",
     "version": "4.9.2",
     "description": "A very complete Discord bot (more than 70 commands) that uses the Discordjs API!",
     "main": "aestetikmod.js",
     "scripts": {
         "start": "node .",
         "lint": "eslint . --ext .js",
-        "testcfg": "node scripts/verify-config.js"
+        "testcfg": "node scripts/verify-config.js",
+        "copyallcmd": "node scripts/copyall-command-language"
     },
     "repository": {
         "type": "git",
@@ -28,7 +29,7 @@
         "async-request": "^1.2.0",
         "autoprefixer": "^10.2.5",
         "btoa": "^1.2.1",
-        "canvas": "^2.6.1",
+        "canvas": "^2.7.0",
         "chalk": "^4.1.0",
         "cheerio": "^1.0.0-rc.5",
         "cli-progress": "^3.9.0",
@@ -81,6 +82,7 @@
         "svg-captcha": "^1.4.0",
         "svg-png-converter": "0.0.9",
         "time-grunt": "^2.0.0",
+        "uno-engine-test": "github:Veinify/uno",
         "webpack": "^5.27.1",
         "webpage": "^0.3.0"
     }
