--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "datatables.net": "^1.10.24",
         "dblapi.js": "^2.3.0",
         "discord-backup": "^2.1.19",
+        "discord-buttons": "^3.2.1",
         "discord-canvas": "^1.3.2",
         "discord-giveaways": "^4.4.3",
         "discord-paginationembed": "^2.1.0",
